# local-data-stack

./: .gitignore  .pre-commit-config.yaml  README.md  dagster.yaml  dbt_project.yml  profiles.yml  pyproject.toml
dagster_home/: pyproject.toml  setup.py
dagster_home/local_dagster/: assets.py  definitions.py  project.py  schedules.py
dagster_home/local_dagster/assets/: bronze.py  dbt.py  output.py
dbt/: dbt_project.yml
dbt/models/02_silver/covid/: schema.yaml
dbt/models/02_silver/xetra/: silver_xetra.sql
dbt/models/03_gold/covid/: gold_covid.sql  schema.yaml
dbt/models/03_gold/xetra/: gold_xetra.sql
models/01_bronze/covid/: sources.yml
models/02_silver/covid/: schema.yaml
models/03_gold/covid/: schema.yaml
models/read/: read.sql  src.yml
models/write/: write.sql
src/local_data_stack/: definitions.py
src/local_data_stack/defs/: jobs.py  resources.py  schedules.py
src/local_data_stack/defs/assets/: bronze.py  dbt.py  presentation.py
src/local_modern_data_stack/: definitions.py  schedules.py
src/local_modern_data_stack/defs/: jobs.py  resources.py  schedules.py
src/local_modern_data_stack/defs/assets/: bronze.py  dbt.py  presentation.py
