[project]
name = "local-modern-data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.12",
    "dagster-dbt>=0.26.12",
    "dagster-webserver>=1.10.12",
    "dbt-core>=1.9.4",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
]
